# pycounts_eig

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_eig/: __init__.py
tests/: test_pycounts_eig.py
