[tool.poetry]
name = "pycounts_eig"
version = "0.1.0"
description = "Counts the number of occurences of unique words in a text"
authors = ["Elena Ganacheva"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
